[package]
name = "hello-wasm"
version = "0.1.0"
authors = ["Tetsuya Taguchi <bouzu.ao@gmail.com>"]
repository = "https://github.com/tagty/hello-wasm"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
